# vision_tune

./: CMakeLists.txt  README.md  package.xml
config/: camera_config.yaml  camera_info_config.yaml  ui_config.yaml
include/vision_tune/process/: process_node.hpp
include/vision_tune/ui/: main_window.hpp  ui_node.hpp
include/vision_tune/usb_cam/insta/: pan_tilt_camera_node.hpp
include/vision_tune/utils/: common_utils.hpp  config_utils.hpp  vision_utils.hpp
launch/: vision_tune.launch.py
model/: best.xml
msg/: PanTilt.msg  PanTiltMsgs.msg  ProcessResult.msg  TuningValue.msg
src/process/: process_node.cpp
src/ui/: main_window.cpp  ui_node.cpp
src/usb_cam/insta/: pan_tilt_camera_node.cpp  usb_camera.cpp
src/utils/: vision_utils.cpp
ui/: main_window.ui
